--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,6 @@
   } */
 
   body {
-    @apply relative font-jakarta text-netral-100 antialiased;
+    @apply relative bg-netral-20 font-jakarta text-netral-100 antialiased;
   }
 }
