--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,9 @@
     @apply border border-red-500;
   } */
 
+  * {
+    @apply font-jakarta;
+  }
   body {
     @apply relative bg-netral-20 font-jakarta text-netral-100 antialiased;
   }
