--- a/src/index.css
+++ b/src/index.css
@@ -23,26 +23,32 @@
     --primary: #e7e7e7;
     --secondary: #5e59ff;
   }
+
   * {
     scrollbar-width: 10px;
     scrollbar-color: var(--secondary) var(--primary);
   }
 
   /* Chrome, Edge, and Safari */
-  *::-webkit-scrollbar {
-    width: 10px;
-  }
 
   #sidebar::-webkit-scrollbar {
     width: 8px;
   }
 
-  *::-webkit-scrollbar-track {
+  *::-webkit-scrollbar,
+  *::-webkit-scrollbar:horizontal {
+    width: 10px;
+    height: 10px;
+  }
+
+  *::-webkit-scrollbar-track,
+  *::-webkit-scrollbar-track:horizontal {
     background: var(--primary);
     border-radius: 6px;
   }
 
-  *::-webkit-scrollbar-thumb {
+  *::-webkit-scrollbar-thumb,
+  *::-webkit-scrollbar-thumb:horizontal {
     background-color: var(--secondary);
     border-radius: 10px;
     border: 2px solid var(--primary);
